--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,38 @@
       content="ZLP 2020! W tym roku zawodnicy będą rywalizować w Counter-Strike Global Offensive o tytuł najlepszej drużyny w szkole. Turniej jest organizowany dla uczniów CKZiU Zbąszynek i odbędzie się podczas Wagarów CKZiU - 20 Marca 2020. Jeśli chcesz zagrać kliknij śmiało w przycisk poniżej i dołącz do nas."
     />
     <title>ZLP</title>
+    <style>
+      div#loading {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        background-color: #FFD829;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        font-size: 2rem;
+        font-weight: bold;
+        font-family: 'Montserrat', sans-serif;
+        z-index: 10000000000000000;
+      }
+    </style>
+    <script>
+      window.addEventListener("load", () => document.body.removeChild(document.getElementById("loadScreen")));
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="loadScreen">
+      <div id="loading">loading...</div>
+      <h1 style="display: none">Nikola Fabian</h1>
+      <h2 style="display: none">
+        wypieki, ciasta, desery, musifny, na zamówienie, zbąszynek, zbąszyń, dąbrówka wlkp, kosieczyn.
+      </h2>
+  
+    </div>
     <div id="root"></div>
   </body>
 </html>
